# par

./: .gitignore  404.html  AGENTS.md  CHANGES.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  SECURITY.md  dune-project  index.html  install.sh  mkdocs.yml  par.opam  par_anthropic.opam  par_cli.opam  par_core.opam  par_eio.opam  par_middleware.opam  par_openai.opam  par_postgres.opam  par_sqlite.opam  sitemap.xml  这是第二行...
.beads/: metadata.json
.gsd/: KNOWLEDGE.md  continue.md
.sisyphus/: boulder.json
RELEASE-TEMPLATE/: index.html
STRATEGY/: index.html
bindings/python/: pyproject.toml  setup.py
bindings/python/benchmarks/: baseline.py  report.py  runner.py  stats.py
bindings/python/docs/: advanced.md  api.md  quickstart.md
bindings/python/examples/: basic_agent.py
bindings/python/par_runtime/: __init__.py  _errors.py  _ffi.py  _loader.c  runtime.py
bindings/python/tests/: test_cancel_stream.py  test_config.py  test_document_loaders.py  test_embed.py  test_generate.py  test_http_timeout.py  test_llm_provider_registry.py  test_par_sdk.py  test_prompt_caching.py  test_rag_e2e.py  test_runtime.py  test_session_resume.py  test_skill.py  test_streaming.py  test_structured.py
docs/: DOC-MAINTENANCE.md  RELEASE-TEMPLATE.md  STRATEGY.md  cli.md  index.md  long-output-generation-mode-plan.md  quickstart.md  react-loop-coding-agent-comparison.md  react-loop-fixes-competitive-analysis.md  release-pipeline-redesign.md  release.md  v0.2-ROADMAP.md  v0.3-ROADMAP.md  v0.3.1-ROADMAP.md  v0.4.5-ROADMAP.md  v0.4.6-ROADMAP.md  v0.5-ROADMAP.md  v0.5.0-ROADMAP.md  v0.7.2-ROADMAP.md
examples/: README.md  basic_agent.ml  dune  otel_tracing.ml  sequential_workflow.json  test_workflow.json  verify_structured.ml
lib/: dune  par.ml
lib/benchmark/: benchmark_types.ml  dune  harness.ml  harness.mli  metrics.ml  report.ml
lib/core/: cache_breakpoint.ml  cancellation.ml  cancellation.mli  capability.ml  capability.mli  chunking.ml  chunking.mli  cli_util.ml  cli_util.mli  context_manager.ml  context_manager.mli  deprecation.ml  deprecation.mli  engine.ml  engine.mli  expression.ml  expression.mli  generate.ml  generate.mli  hnsw.ml  hnsw.mli  hook.ml  hook.mli  http_timeout.ml  invoke_context.ml  invoke_context.mli  json_extract.ml  json_extract.mli  jsonschema.ml  jsonschema.mli  message.ml  metrics.ml  metrics.mli  persistence_writer.ml  persistence_writer.mli  provider_registry.ml  provider_registry.mli  runtime.ml  runtime.mli  skill_registry.ml  (+20 more)
lib/documents/: csv_loader.ml  csv_loader.mli  directory_loader.ml  directory_loader.mli  document.ml  document.mli  docx_loader.ml  docx_loader.mli  html_loader.ml  html_loader.mli  markdown_loader.ml  markdown_loader.mli  pdf_loader.ml  pdf_loader.mli  text_loader.ml  text_loader.mli
lib/event_bus/: event_bus.ml  event_bus.mli
lib/ffi/: dune  par_capi.ml  par_ffi.c  par_ffi.h
lib/mcp/: mcp_client.ml  mcp_client.mli  mcp_errors.ml  mcp_errors.mli  mcp_naming.ml  mcp_naming.mli  mcp_server.ml  mcp_server.mli  mcp_transport.ml  mcp_transport.mli  mcp_transport_http.ml  mcp_transport_http.mli  mcp_transport_stdio.ml  mcp_transport_stdio.mli  mcp_types.ml  mcp_types.mli
lib/memory/: dune  memory_error.ml  memory_object.ml  memory_object.mli  memory_service.ml  memory_service.mli  sqlite_memory.ml  sqlite_memory.mli
lib/middleware/: arg_validation.ml  arg_validation.mli  logging.ml  logging.mli  output_validation.ml  output_validation.mli  pii_mask.ml  pii_mask.mli  rate_limit.ml  rate_limit.mli  retry.ml  retry.mli  sanitize_tool_output.ml  sanitize_tool_output.mli  timeout.ml  timeout.mli  validation.ml
lib/par_anthropic/: anthropic_provider.ml  anthropic_provider.mli  dune
lib/par_cli/: dune  main.ml
lib/par_core/: cancellation.ml  cancellation.mli  context_manager.ml  dune  engine.ml  engine.mli  expression.ml  runtime.ml  runtime.mli  state_machine.ml  types.ml  types.mli  workflow_engine.ml  workflow_engine.mli
lib/par_eio/: dune  event_bus.ml  event_bus.mli
lib/par_middleware/: dune  logging.ml  pii_mask.ml  rate_limit.ml  retry.ml  timeout.ml  validation.ml
lib/par_openai/: dune  openai_provider.ml  openai_provider.mli
lib/par_postgres/: dune  postgres_persistence.ml  postgres_persistence.mli
lib/par_sqlite/: dune  sqlite_persistence.ml  sqlite_persistence.mli
lib/persistence/: noop_persistence.ml  noop_persistence.mli  persistence_common.ml  postgres_persistence.ml  postgres_persistence.mli  sqlite_persistence.ml  sqlite_persistence.mli
lib/postgres/: dune  postgres_persistence.ml  postgres_persistence.mli
lib/providers/: anthropic_provider.ml  anthropic_provider.mli  http_client.ml  http_client.mli  mock_provider.ml  mock_provider.mli  openai_provider.ml  openai_provider.mli
lib/skills/: builtin_skills.ml  skill_loader.ml  skill_loader.mli
lib/tools/: bash_blacklist.ml  bash_blacklist.mli  bash_confirm.ml  bash_confirm.mli  bash_policy.ml  bash_policy.mli  bash_safe_command.ml  bash_safe_command.mli  builtin_tools.ml  builtin_tools.mli
quickstart/: index.html
schema/: postgres.sql  sqlite.sql
scripts/: build-from-source.sh  (+8 more)
test/: dune  manual_qa_assistant.ml  mcp_mock_server.ml  test_bash_blacklist.ml  test_bash_confirm.ml  test_bash_policy.ml  test_bash_runtime.ml  test_bash_safe_command.ml  test_benchmark.ml  test_budget_manager.ml  test_builtin_skills.ml  test_builtin_tools.ml  test_cache_breakpoint_api.ml  test_cache_events.ml  test_cancel_task.ml  test_capability.ml  test_capability_gating.ml  test_chunking.ml  test_cli_args.ml  test_cli_dispatch.ml  test_concurrency.ml  test_config_validation.ml  test_content_blocks.ml  test_context_compression.ml  test_context_manager.ml  test_csv_loader.ml  test_deprecation.ml  test_directory_loader.ml  test_document_loaders_e2e.ml  test_docx_loader.ml  test_duplicate_tool.ml  test_dynamic_toolset.ml  test_embedding_api.ml  test_engine_assistant_message.ml  test_engine_breakpoint_candidates.ml  test_engine_structured.ml  test_event_bus_backpressure.ml  test_event_bus_dlq.ml  test_event_bus_rag.ml  test_event_persistence_e2e.ml  (+79 more)
(+288 files in other folders)
