(include_subdirs unqualified)

(rule
 (target version.ml)
 (action (with-stdout-to version.ml (echo "let version = \"%{version:par}\""))))

(library
 (name par)
 (public_name par)
 (libraries base yojson eio uuidm unix str sexplib0 ppx_sexp_conv.runtime-lib
             ppx_deriving_jsonschema.runtime
              sqlite3 csv logs tls-eio cohttp-eio lambdasoup omd yaml camlpdf
             ca-certs x509 mirage-crypto-rng.unix base64 digestif)
  (preprocess
   (pps ppx_deriving_yojson ppx_deriving_jsonschema ppx_sexp_conv ppx_compare)))
