(test
 (name test_par)
 (libraries par alcotest)
 (modules test_par test_state_machine test_expression test_types))

(test
 (name test_integration)
 (libraries par eio_main alcotest)
 (modules test_integration))

(test
 (name test_stream)
 (libraries par eio_main mirage-crypto-rng.unix alcotest)
 (modules test_stream))

(test
 (name test_mock_provider)
 (libraries par alcotest)
 (modules test_mock_provider))

(test
 (name test_ffi_register)
 (libraries par eio_main alcotest)
 (modules test_ffi_register))

(test
 (name test_builtin_tools)
 (libraries par eio_main alcotest)
 (modules test_builtin_tools))

(test
 (name test_cancel_task)
 (libraries par eio_main alcotest)
 (modules test_cancel_task))

(test
 (name test_template)
 (libraries par alcotest)
 (modules test_template))

(test
 (name test_validation)
 (libraries par alcotest)
 (modules test_validation))

(test
 (name test_duplicate_tool)
 (libraries par eio_main alcotest)
 (modules test_duplicate_tool))

(test
 (name test_config_validation)
 (libraries par eio_main alcotest)
 (modules test_config_validation))

(test
 (name test_make_agent)
 (libraries par eio_main alcotest)
 (modules test_make_agent))

(test
 (name test_steering_queue)
 (libraries par eio_main alcotest)
 (modules test_steering_queue))

(test
 (name test_health_metrics)
 (libraries par eio_main alcotest)
 (modules test_health_metrics))

(test
 (name test_on_update)
 (libraries par eio_main alcotest)
 (modules test_on_update))

(test
 (name test_tool_call_hooks)
 (libraries par eio_main alcotest)
 (modules test_tool_call_hooks))

(test
 (name test_tool_progress)
 (libraries par eio_main alcotest)
 (modules test_tool_progress))

(test
 (name test_bash_safe_command)
 (libraries par alcotest)
 (modules test_bash_safe_command))

(test
 (name test_bash_blacklist)
 (libraries par alcotest)
 (modules test_bash_blacklist))

(test
 (name test_bash_policy)
 (libraries par alcotest)
 (modules test_bash_policy))

(test
 (name test_bash_runtime)
 (libraries par eio_main alcotest)
 (modules test_bash_runtime))

(test
 (name test_mcp_naming)
 (libraries par alcotest eio yojson logs)
 (modules test_mcp_naming)
 (action (run %{test})))

(test
 (name test_mcp_errors)
 (libraries par alcotest yojson)
 (modules test_mcp_errors))

(test
 (name test_mcp_types)
 (libraries par alcotest)
 (modules test_mcp_types)
 (action (run %{test})))

(test
 (name test_mcp_transport_stdio)
 (libraries par alcotest eio eio_main yojson logs)
 (modules test_mcp_transport_stdio)
 (action (run %{test})))

(test
 (name test_mcp_server)
 (libraries par alcotest eio eio_main yojson logs)
 (modules test_mcp_server)
 (action (run %{test})))

(executable
 (name mcp_mock_server)
 (libraries eio_main yojson)
 (modules mcp_mock_server))
