(test
 (name test_par)
 (libraries par alcotest)
 (modules test_par test_state_machine test_expression test_types))

(test
 (name test_integration)
 (libraries par eio_main alcotest)
 (modules test_integration))

(test
 (name test_stream)
 (libraries par eio_main mirage-crypto-rng.unix alcotest)
 (modules test_stream))

(test
 (name test_mock_provider)
 (libraries par alcotest)
 (modules test_mock_provider))

(test
 (name test_ffi_register)
 (libraries par eio_main alcotest)
 (modules test_ffi_register))

(test
 (name test_builtin_tools)
 (libraries par eio_main alcotest)
 (modules test_builtin_tools))

(test
 (name test_cancel_task)
 (libraries par eio_main alcotest)
 (modules test_cancel_task))

(test
 (name test_template)
 (libraries par alcotest)
 (modules test_template))

(test
 (name test_validation)
 (libraries par alcotest)
 (modules test_validation))

(test
 (name test_duplicate_tool)
 (libraries par eio_main alcotest)
 (modules test_duplicate_tool))

(test
 (name test_dynamic_toolset)
 (libraries par eio_main alcotest)
 (modules test_dynamic_toolset))

(test
 (name test_config_validation)
 (libraries par eio_main alcotest)
 (modules test_config_validation))

(test
 (name test_provider_api_key)
 (libraries par alcotest)
 (modules test_provider_api_key))

(test
 (name test_make_agent)
 (libraries par eio_main alcotest)
 (modules test_make_agent))

(test
 (name test_steering_queue)
 (libraries par eio_main alcotest)
 (modules test_steering_queue))

(test
 (name test_health_metrics)
 (libraries par eio_main alcotest)
 (modules test_health_metrics))

(test
 (name test_on_update)
 (libraries par eio_main alcotest)
 (modules test_on_update))

(test
 (name test_tool_call_hooks)
 (libraries par eio_main alcotest)
 (modules test_tool_call_hooks))

(test
 (name test_tool_progress)
 (libraries par eio_main alcotest)
 (modules test_tool_progress))

(test
 (name test_tool_events)
 (libraries par eio_main alcotest)
 (modules test_tool_events))

(test
 (name test_http_streaming)
 (libraries par eio_main alcotest)
 (modules test_http_streaming))

(test
 (name test_bash_safe_command)
 (libraries par alcotest)
 (modules test_bash_safe_command))

(test
 (name test_workspace)
 (libraries par alcotest)
 (modules test_workspace))

(test
 (name test_bash_blacklist)
 (libraries par alcotest)
 (modules test_bash_blacklist))

(test
 (name test_bash_policy)
 (libraries par alcotest)
 (modules test_bash_policy))

(test
 (name test_bash_runtime)
 (libraries par eio_main alcotest)
 (modules test_bash_runtime))

(test
 (name test_per_call_workspace)
 (libraries par eio_main alcotest)
 (modules test_per_call_workspace))

(test
 (name test_mcp_naming)
 (libraries par alcotest eio yojson logs)
 (modules test_mcp_naming)
 (action (run %{test})))

(test
 (name test_mcp_errors)
 (libraries par alcotest yojson)
 (modules test_mcp_errors))

(test
 (name test_mcp_types)
 (libraries par alcotest)
 (modules test_mcp_types)
 (action (run %{test})))

(test
 (name test_mcp_transport_stdio)
 (libraries par alcotest eio eio_main yojson logs)
 (modules test_mcp_transport_stdio)
 (action (run %{test})))

(test
 (name test_mcp_server)
 (libraries par alcotest eio eio_main yojson logs)
 (modules test_mcp_server)
 (action (run %{test})))

(test
 (name test_mcp_client)
 (libraries par alcotest eio eio_main yojson base logs)
 (modules test_mcp_client)
 (action (run %{test})))

(test
 (name test_mcp_runtime)
 (libraries par alcotest eio eio_main yojson logs)
 (modules test_mcp_runtime))

(test
 (name test_mcp_events)
 (libraries par alcotest)
 (modules test_mcp_events))

(test
 (name test_event_bus_dlq)
 (libraries par eio_main alcotest)
 (modules test_event_bus_dlq))

(test
 (name test_middleware)
 (libraries par eio_main alcotest)
 (modules test_middleware))

(test
 (name test_workflow_engine)
 (libraries par eio_main alcotest sqlite3)
 (modules test_workflow_engine))

(test
 (name test_event_bus_backpressure)
 (libraries par alcotest)
 (modules test_event_bus_backpressure))

(test
 (name test_persistence_common)
 (libraries par alcotest)
 (modules test_persistence_common))

(test
 (name test_mcp_facade)
 (libraries par alcotest)
 (modules test_mcp_facade))

(test
 (name test_providers)
 (libraries par eio eio_main alcotest yojson tls-eio x509 mirage-crypto-rng.unix)
 (modules test_providers)
 (action (run %{test})))

(test
 (name test_output_validation)
 (libraries par alcotest)
 (modules test_output_validation))

(test
 (name test_bash_confirm)
 (libraries par alcotest)
 (modules test_bash_confirm))

(executable
 (name mcp_mock_server)
 (libraries eio_main yojson)
 (modules mcp_mock_server))

(test
 (name test_persistence_writer)
 (libraries par eio eio_main alcotest logs)
 (modules test_persistence_writer)
 (action (run %{test})))

(test
 (name test_event_persistence_e2e)
 (libraries par eio_main alcotest sqlite3)
 (modules test_event_persistence_e2e)
 (action (run %{test})))

(test
 (name test_handoff)
 (libraries par eio_main alcotest)
 (modules test_handoff))

(test
 (name test_list_agents)
 (libraries par eio_main alcotest)
 (modules test_list_agents))

(test
 (name test_sessions)
 (libraries par eio_main alcotest sqlite3)
 (modules test_sessions))

(test
 (name test_mcp_transport_http)
 (libraries par alcotest)
 (modules test_mcp_transport_http))

(test
 (name test_mcp_sampling)
 (libraries par alcotest)
 (modules test_mcp_sampling))

(test
 (name test_context_manager)
 (libraries par alcotest)
 (modules test_context_manager))

(test
 (name test_noop_persistence)
 (libraries par alcotest)
 (modules test_noop_persistence))

(test
 (name test_streaming_tool_call_id)
 (libraries par eio alcotest yojson)
 (modules test_streaming_tool_call_id))

(test
 (name test_strip_ansi)
 (libraries par alcotest)
 (modules test_strip_ansi))

(test
 (name test_json_extract)
 (libraries par alcotest yojson)
 (modules test_json_extract))

(test
 (name test_engine_structured)
 (libraries par eio_main alcotest yojson)
 (modules test_engine_structured))

(test
 (name test_truncation_fix)
 (libraries par eio_main alcotest)
 (modules test_truncation_fix))

(test
 (name test_truncation_config)
 (libraries par eio_main alcotest)
 (modules test_truncation_config))

(test
 (name test_context_compression)
 (libraries par eio_main alcotest)
 (modules test_context_compression))

(test
 (name test_generate)
 (libraries par eio_main alcotest)
 (modules test_generate))

(test
 (name test_tool_prompt)
 (libraries par alcotest)
 (modules test_tool_prompt))

(test
 (name test_jsonschema)
 (libraries par alcotest)
 (modules test_jsonschema)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving_jsonschema)))

(test
 (name test_embedding_api)
 (libraries par eio_main alcotest yojson)
 (modules test_embedding_api))

(test
 (name test_rag)
 (libraries par eio_main alcotest sqlite3)
 (modules test_rag))

(test
 (name test_http_timeout)
 (libraries par eio eio_main alcotest)
 (modules test_http_timeout))

(test
 (name test_event_bus_rag)
 (libraries par alcotest)
 (modules test_event_bus_rag))

(test
 (name test_skill_registry)
 (libraries par alcotest)
 (modules test_skill_registry))

(test
 (name test_builtin_skills)
 (libraries par eio_main alcotest)
 (modules test_builtin_skills))

(test
 (name test_skill_loader)
 (libraries par alcotest)
  (modules test_skill_loader))

(test
 (name test_skill_activation)
 (libraries par alcotest)
 (modules test_skill_activation))

(test
 (name test_skill_runtime)
 (libraries par eio_main alcotest)
 (modules test_skill_runtime))
(test
 (name test_skill_user_activation)
 (libraries par eio_main alcotest)
 (modules test_skill_user_activation))
(test (name test_skill_e2e) (libraries par eio_main alcotest) (modules test_skill_e2e))

(test
 (name test_budget_manager)
 (libraries par alcotest)
 (modules test_budget_manager))

(test
 (name test_cache_events)
 (libraries par alcotest)
 (modules test_cache_events))

(test
 (name test_template_zone)
 (libraries par alcotest)
 (modules test_template_zone))

(test
 (name test_stable_volatile_prompts)
 (libraries par alcotest)
 (modules test_stable_volatile_prompts))

(test
 (name test_cache_breakpoint_api)
 (libraries par alcotest)
 (modules test_cache_breakpoint_api))

(test
 (name test_engine_breakpoint_candidates)
 (libraries par alcotest)
 (modules test_engine_breakpoint_candidates))

(test
 (name test_content_blocks)
 (libraries par alcotest)
 (modules test_content_blocks))

(test
 (name test_openai_cached_tokens)
 (libraries par alcotest)
 (modules test_openai_cached_tokens))

(test
 (name test_html_loader)
 (libraries par alcotest)
 (modules test_html_loader))

(test
 (name test_pdf_loader)
 (libraries par alcotest str)
 (modules test_pdf_loader))

(test
 (name test_text_loader)
 (libraries par alcotest)
 (modules test_text_loader))

(test
 (name test_markdown_loader)
 (libraries par alcotest)
 (modules test_markdown_loader))

(test
 (name test_csv_loader)
 (libraries par alcotest)
 (modules test_csv_loader))

(test
 (name test_directory_loader)
 (libraries par alcotest)
 (modules test_directory_loader))

(test
 (name test_document_loaders_e2e)
 (libraries par alcotest eio_main)
 (modules test_document_loaders_e2e))

(test
 (name test_memory)
 (libraries par_memory alcotest eio_main str)
 (modules test_memory))

(test
 (name test_sqlite_memory_schema)
 (libraries par_memory alcotest eio_main str sqlite3)
 (modules test_sqlite_memory_schema))

(test
 (name test_memory_tools)
 (libraries par par_memory eio_main alcotest)
 (modules test_memory_tools))

(test
 (name test_memory_embedding)
 (libraries par_memory alcotest eio_main sqlite3)
 (modules test_memory_embedding))

(test
 (name test_fiber_spike)
 (libraries eio_main)
 (modules test_fiber_spike)
 (action (run %{test})))

(test
 (name test_concurrency)
 (libraries par eio_main alcotest)
 (modules test_concurrency))

(test
 (name test_deprecation)
 (libraries par alcotest logs)
 (modules test_deprecation)
 (action (run %{test})))

(test
 (name test_capability)
 (libraries par alcotest)
 (modules test_capability))

(test
 (name test_workspace_paths)
 (libraries par alcotest)
 (modules test_workspace_paths))

