[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "par-runtime"
version = "0.6.2-beta.20260629"
description = "Python bindings for P-A-R (Programmable Agent Runtime)"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
par_runtime = ["lib/*.so", "lib/vec0.*", "py.typed"]
