(include_subdirs no)

; Shared object build — optional, requires eio_main
; Build with: dune build lib/ffi/par_capi.so
; Note: eio_main internally selects the platform-appropriate backend
; (eio_posix on Unix, eio_windows on Windows). We do NOT list eio.unix
; here because (a) par_capi.ml does not use the Eio_unix module directly,
; and (b) eio.unix is POSIX-only and would break the Windows build.
; The `unix` library below is the OCaml standard library (Unix module),
; which is available on both POSIX and MinGW/Windows.
(executable
 (name par_capi)
 (libraries par par_memory eio_main unix threads mirage-crypto-rng.unix)
 (foreign_stubs
  (language c)
  (names par_ffi))
 (modes (native shared_object))
 (link_flags :standard -linkall -cclib -lpthread))

; Install the C header alongside the library
(install
 (package par)
 (section lib)
 (files (par_ffi.h as include/par_ffi.h)))

; NOTE (2026-07-19): The vec0.{so,dylib,dll} copy rules that used to live
; here were removed. They were dead code:
;   1. No dune stanza depended on them ((deps vec0.*) returned zero matches).
;   2. Dune does not build orphan targets, so _build/default/lib/ffi/vec0.*
;      was never materialized.
;   3. Runtime fallback in par_capi.ml:vec_extension_path hits
;      cwd/vendor/sqlite-vec/<platform>/vec0.* for OCaml SDK local dev.
;   4. The Python wheel sources vec0 directly from vendor/ in the
;      pypi-publish.yml workflow (see "Stage shared library + sqlite-vec
;      extension" step) — it never relied on the dune rule either.
;
; vec0 is a vendored pre-built binary, not a dune build artifact. The
; correct layer boundary keeps vendored assets out of the dune build graph.
